# chrome_history_storer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/chrome_history/: db.rs  deserialize.rs  mod.rs  search.rs
