[package]
name = "chrome_history_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
sqlite = "0.30.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
chrono = "0.4.34"
log = "0.4.22"
env_logger = "0.11.6"
clap = { version = "4.5.26", features = ["derive"] }
